# rcm

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  compose.yml  main.py  pyproject.toml
config/: Caddyfile.example  config.yaml.example
src/rcm/: __init__.py  cli.py  config.py  generators.py  parser.py  ssh.py
src/rcm/commands/: __init__.py  list.py  pull.py  restart.py  status.py  sync.py
src/rcm/templates/: client.toml.j2  server.toml.j2
