[project]
name = "rcm"
version = "0.2.0"
description = "Rathole Caddy Manager - CLI to manage Rathole tunnels from Caddyfile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fabric>=3.2.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "typer[all]>=0.21.0",
]

[project.scripts]
rcm = "rcm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcm"]
